Resolved editor warnings